opam-version: "1.2"
maintainer: "iitalics, OhadRau"
authors: ["iitalics <milo@ccs.neu.edu>" "OhadRau <admin@ohad.space>"]
homepage: "https://github.com/nanocaml/nanocaml"
bug-reports: "https://github.com/nanocaml/nanocaml/issues"
license: "MIT"
dev-repo: "git+https://github.com/nanocaml/nanocaml.git"
build: ["dune" "build" "-p" name "-j" jobs]
depends: ["batteries" "dune" {build & >= "1.0" } "ocaml-migrate-parsetree"]
